Fixed page spacing

--- a/src/app/request-investigation/request-investigation.component.scss
+++ b/src/app/request-investigation/request-investigation.component.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
   padding: 40px 20px;
   position: relative;
-  row-gap: 20px;
   text-align: center;
 
   h1,
@@ -41,7 +40,6 @@
 .content {
   display: flex;
   flex-direction: column;
-  row-gap: 40px;
 
   .button {
     background-color: #101bcf;
@@ -128,13 +126,11 @@
       }
 
       .name {
-        // line-height: math.div(27, 22);
         color: #212121;
       }
 
       .title {
         font-size: 12px;
-        // line-height: math.div(27, 23);
       }
     }
   }
